fix chinese character truncate.

--- a/_drafts/读秦晖秦汉史讲义.md
+++ b/_drafts/读秦晖秦汉史讲义.md
@@ -3,6 +3,7 @@ layout: post
 title:  "读秦晖秦汉史讲义"
 categories: history
 comments: true
+cn: true
 ---
 
 我是一次很偶然的机会，在李一诺的人物对谈直播中，认识了秦晖教授。那次直播的主题，就是秦晖教授的新书 - 秦汉史讲义。随着年龄增长开始对历史感兴趣的我，就驻足观看了好一会。然后，兴趣一下子就被勾了起来。原来在秦之前的周制下，构建的是族群式的小共同体本位的社会，期望形成的是一个“人人亲其亲，长其长，而天下平”的制度。
