tweak the content.

--- a/_drafts/读秦晖秦汉史讲义.md
+++ b/_drafts/读秦晖秦汉史讲义.md
@@ -18,6 +18,6 @@ cn: true
 
 每当我学到新知识，了解了以前不知道的事实，都会感到一种纯粹的获得的喜悦，即使有些事实是残酷的。但这同时，也引出来的一个深沉的问题是，在这样一种制度下，个体该如何自处呢？
 
-首先，我觉得对社会表里不一本质的认识，可以避免陷入“理想主义”或者“犬儒主义”两个极端。理解规则，但不被规则迷惑心智，耗损精力。其次，可以在这样体制系统的夹缝里寻找些符合自己本性的自由度。比如，从一开始就在体制外工作的我，一方面感觉很庆幸，但另一方面也确实导致“阅历太浅”。然后，在保持独立的批判精神同时，也需要保持一定的“批判距离”，毕竟有些是可以改变的，比如个人能力，局部的环境，而有些东西，个体是很无能为力的。再者，学习真正的儒家传统文化，而不是为强权服务的儒术。要成为善良的人，仁义的人。
+首先，我觉得对社会表里不一本质的认识，可以避免陷入“理想主义”或者“犬儒主义”两个极端。理解规则，但不被规则迷惑心智，耗损精力。其次，可以在这样体制系统的夹缝里寻找些符合自己本性的自由度。比如，可以寻求体制外的工作，或者自由职业，或者体制内“量力而行”。然后，在保持独立的批判精神同时，也需要保持一定的“批判距离”，毕竟有些东西是可以改变的，比如个人能力，局部的环境，而有些东西，个体是很无能为力的。再者，学习真正的儒家传统文化，而不是为强权服务的儒术。要成为善良的人，仁义的人。
 
 最后，勇敢真的是一个非常可贵的品质，它可以让我们在关键时刻，“知其不可为而为之，知其可为而不妄为”，守住自我底线。
