update blog content.

--- a/_drafts/解释鸿沟.md
+++ b/_drafts/解释鸿沟.md
@@ -6,16 +6,18 @@ comments: true
 cn: true
 ---
 
-很少有专门以哲学为主题的谈话类节目。但，腾讯去年-2024年-推出的《解释鸿沟》却是少有的一个，一共七集，记录了哲学家陈嘉映重要的思想交流和日常精神活动。节目中有几集像是大学里的哲学问题研讨会，就一些哲学问题展开自由讨论，但是是放在陈嘉映老师生活和学校工作的这样一个场景下。毕竟也是面向大众的商业节目，表现的不能像课堂授课一样严肃。
+很少有专门以哲学为主题的谈话类节目。但，腾讯去年-2024年-推出的《解释鸿沟》却是少有的一个，一共七集，记录了哲学家陈嘉映重要的思想交流和日常精神活动。节目中有几集像是大学里的哲学问题研讨会，就一些哲学问题展开自由讨论，但是是放在陈嘉映老师生活和学校工作的这样一个场景下。感觉很自然和放松，毕竟也是面向大众的商业节目，表现的不能像课堂授课那样的严肃。
 
-我感觉，能被这个节目吸引的观众，在平时应该也是爱追问，爱思考，瞎琢磨的人。所以通过这样的节目，看看一帮专业思考者是怎么讨论一些大问题的，兴许对自己平时思考的类似问题，能找到直接的解答或者有益的思路。我是最近一两年对哲学开始感兴趣的，也看了些科普性的书，经常会听一些哲学讲座，对有些哲学讨论的范畴，也知道一些。所以，不能说一点基础都没有。但是，节目中讨论的有些问题，要能随时跟上还是挺费劲的。不像看书，是可以停顿、反复阅读，慢慢花时间来尝试理解的（其实很多时候，也并不完全理解）。这样的现场讨论，对于非专业的我来说，脑袋里都是一个个问号和线段，想要努力连接起来跟随讨论，或寻求启发自己思考的路径，却是常常陷入更发散的一些思考中。。。
+我感觉，能被这个节目吸引的观众，在平时应该也是爱追问，爱思考，瞎琢磨的人。所以通过这样的节目，看看一帮专业思考者是怎么讨论一些大问题的，兴许对自己平时思考的类似问题，能找到直接的解答或者有益的思路。我是最近一两年对哲学开始感兴趣的，也看了些科普性的书，偶尔会听一些哲学讲座，对有些哲学讨论的范畴，也知道一些。所以，不能说一点基础都没有。但是，节目中讨论的有些问题，要能随时跟上还是挺费劲的。不像看书，是可以停顿、反复阅读，慢慢花时间来尝试理解的（其实很多时候，也并不完全理解）。这样的现场讨论，对于非专业的我来说，脑袋里都是一个个问号和线段，想要努力连接起来跟随讨论，或寻求启发自己思考的路径，却是常常陷入更发散的思考中。。。
 
 抛开节目中讨论的具体哲学问题不说，就尝试解释这个本身，以及一般的哲学和科学关系问题，我到是有两点思考，
 
-第一，解释是为了对一个认知能有一个一致的理解。理解的完整性应该要包含，理解为什么不理解。通常在争执中，有说辞，有论证，有旁引，有自我的相信和觉得，等等。但这些手段，看起来都是用来要说服对方。甚至，解释这两个字里，也多少隐含着，主体论述的正确性，要让对方来理解。但恰恰是，这种隐含的预设，绊住了更有益的讨论。所以，我觉得，在任何讨论中，都要有意识的保持着两种可能性，一是我的论述是正确的，然后尝试理解对方为什么不理解，二是我的观点是错误的，然后尝试从对方的辩论中，纠正我的错误。带着这样的“理解完整性”的意识来讨论，会产生更有益的结果。但，同时我也理解，哲学问题本身就很抽象和宽泛，即使讨论各方都是积极的，在充分的理解意识下讨论，也会不断地争论。虽然很可能依然没有共识，但却可以是更加有益的讨论。。。
+第一，解释是为了对一个认知能有一个一致的理解。理解的完整性应该要包含，理解为什么不理解。通常在争执中，有说辞，有论证，有旁引，有自我的相信和觉得，等等。但这些手段，看起来都是用来要说服对方。甚至，解释这两个字里，也多少隐含着，主体论述的正确性，要让对方来理解。但恰恰是，这种隐含的预设，绊住了更有益的讨论。所以，我觉得，在任何讨论中，都要有意识的保持着两种可能性，一是我的论述是正确的和全面的，然后尝试理解对方为什么不理解，二是我的观点是有误的或片面的，然后尝试从对方的辩论中，做自我纠正。带着这样的“理解完整性”的意识来讨论，会产生更有益的结果。但，同时我也理解，哲学问题本身就很抽象和宽泛，即使讨论各方都是积极的，在充分的理解意识下讨论，也会不断地争论。虽然很可能依然没有共识，但却可以是更加有益的讨论。。。
 
 第二，哲学和科学之间是否有一个边界。是否曾经属于哲学范畴的一个问题，随着科学的发展，变成了一个可以去实证，并完全解释了的科学问题呢？或者说这样曾经的一个纯粹的哲学问题，开始部分的转化成一个科学问题，可以有系统，有步骤的来尝试去解决了呢？从节目中的关于意识和神经科学的讨论来看，我觉得，起码哲学与科学的边界在变的模糊，科学的发展不断地将原本属于哲学范畴的问题纳入自己的研究领域。比如，对于意识，心灵，自由意志等哲学问题的讨论，已经不能忽视神经科学和认知科学的研究成果，甚至说已经被其深刻影响了。如果将来有一天，我们可以完全从神经科学的角度解释意识，我不会感到特别惊讶。
 
-然后，回到节目中讨论的关于意识、心灵的哲学话题，让我回想起了小时候，在刚有了强烈的自我主体意识后，思考并体验这种自我意识本身时，得到的两种奇特的感受，一是在专注“触摸”这个自我意识时候脱离肉体的感觉（或者具体说是一种为什么“我”会在这幅躯壳里的困惑），二是思考本身的一种“嵌套”会让我快速的陷入一种死循环中，短暂而疯狂（现在我了解到，这是一种在短时间内一直对终极问题求索的思考体验）。现在的我，可以慢下来静静的思考了，但以前的那种奇特的感受却不再强烈了。
+然后，回到节目中讨论的关于意识、心灵的哲学话题，让我回想起了小时候，在刚有了强烈的自我主体意识后，思考并体验这种自我意识本身时，得到的两种奇特的感受，一是在专注“触摸”这个自我意识时候脱离肉体的感觉（或者具体说是一种为什么“我”会在这幅躯壳里的困惑），二是思考本身的一种“嵌套”或者无限回溯，会让我快速的陷入一种死循环中，短暂而疯狂的感觉（现在我了解到，这是一种在短时间内一直对终极问题求索的思考体验）。现在，虽然我可以慢下来静静的思考，但以前的那种奇特的感受却不再强烈了。
 
-最后，我想说，人是要有信仰的。如爱因斯坦说的，他只信仰斯宾诺莎的上帝。我也一样。
+不过，那种沉寂已久的，对自我探究的本能，依然在。并且，在我当前这个年龄下，似乎反而变的更强烈了。也正因为此，我开始接触，并学习哲学。学习哲学也带来实际的意义，一方面，每当我双手合十，望向远方，对世间的一切“物自体”都会充满敬畏。这让我抛弃傲慢，保持谦卑。另一方面，对哲学问题的探究，也进一步锻炼我理解和尝试解决抽象问题的能力。这是一个思考和学习并存的过程。至此，我知道，如果要再进一步，我需要阅读大量的哲学著作。比如，康德的纯粹理性批判，海德格尔的存在与时间，等等。
+
+最后，在结束这篇写作之前，我想说，人是要有信仰的。如爱因斯坦说的，他只信仰斯宾诺莎的上帝。我想我也一样。
